--- a/app/src/main/res/layout/activity_user_home.xml
+++ b/app/src/main/res/layout/activity_user_home.xml
@@ -8,7 +8,7 @@
     android:background="@drawable/background_body"
     android:fitsSystemWindows="true"
     tools:context=".ui.user.UserHomeActivity"
-    tools:openDrawer="end">
+    tools:openDrawer="start">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -19,9 +19,9 @@
             style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            android:layout_alignParentTop="true"
             android:background="@drawable/background_toolbar"
             android:elevation="8dp"
-            android:layout_alignParentTop="true"
             app:menu="@menu/toolbar_menu"
             app:navigationIcon="@drawable/ic_toolbar_nav"
             app:subtitleTextAppearance="@style/ToolbarSubtitleTextAppearance"
@@ -86,7 +86,7 @@
                     android:paddingEnd="8dp">
 
                     <androidx.cardview.widget.CardView
-                        android:id="@+id/btnBooking"
+                        android:id="@+id/btnBook"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:layout_marginStart="8dp"
@@ -115,7 +115,7 @@
                     </androidx.cardview.widget.CardView>
 
                     <androidx.cardview.widget.CardView
-                        android:id="@+id/btnRental"
+                        android:id="@+id/btnRent"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:layout_marginStart="8dp"
@@ -144,7 +144,7 @@
                     </androidx.cardview.widget.CardView>
 
                     <androidx.cardview.widget.CardView
-                        android:id="@+id/btnPartner"
+                        android:id="@+id/btnPartners"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:layout_marginStart="8dp"
